<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FairLink</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="books">杂志</string>
    <string name="club_member_id">账号:</string>
    <string name="club_member_password">密码:</string>
    <string name="club_member_join">登录</string>
    <string name="club_member_xing">姓</string>
    <string name="club_member_ming">名</string>
    <string name="club_member_phone">联系电话</string>
    <string name="club_member_mail">联系邮箱</string>
    <string name="club_member_read">我已阅读用户协议</string>
    <string name="club_member_register">注册</string>
    <string name="club_member_forget_password">忘记密码</string>
    <string name="club_function_title">特色功能</string>
    <string name="club_benefit_detail_txt">详情</string>
    <string name="club_benefit_add_txt">新增</string>
    <string name="club_exchange_title_txt">里程累积及兑换</string>
    <string name="club_join_title_txt">入会说明</string>
    <string name="customer_satisfaction_title">服务满意度调研</string>
    <string name="customer_wifi_title">Wifi体验调研</string>
    <string name="customer_satisfaction_detail">亲爱的旅客：\n为了更好地了解您的需求和期待，为您提供更优质的服务，我们诚挚邀请您参加旅客满意度调查。我们真诚希望您能在百忙之中抽出少许时间，留下您宝贵的意见和建议。我们将积极采纳您的建议，竭尽全力提高服务品质，再次向您表达感谢并祝您旅途愉快。</string>
    <string name="customer_wifi_detail">尊敬的用户：\n您好！欢迎参加世纪空联机载WiFi设备使用满意度调研。本调查主要用于对世纪空联的产品和服务情况做总体评估，从而帮助我们改善和提升产品和服务质量，为您提供更好的用户体验。\n参与本次调研大概会占用您5到10分钟的时间，我们会对涉及的个人隐私绝对保密，感谢您的大力配合！</string>
    <string name="customer_satisfaction_rb1">非常满意</string>
    <string name="customer_satisfaction_rb2">满意</string>
    <string name="customer_satisfaction_rb3">一般</string>
    <string name="customer_satisfaction_rb4">不满意</string>
    <string name="customer_bbs_title1">留言板</string>
    <string name="customer_bbs_say">我有话想说...</string>
    <string name="customer_bbs_say2">您可以留下您的联系方式，方便我们对您进行更好的服务跟进</string>
    <string name="customer_bbs_email1">邮箱</string>
    <string name="customer_bbs_phone1">电话</string>
    <string name="customer_confirm">提交</string>
    <string name="start_time">00:00</string>
    <string name="empty_list">列表为空</string>
    <string name="no_net">请检查网络环境</string>
    <string name="movie_name">电影名称:  </string>
    <string name="director">导演:  </string>
    <string name="region">区域:  </string>
    <string name="actor">演员:  </string>
    <string name="movie">电影</string>
    <string name="tv">电视</string>
    <string name="music">音乐</string>
    <string name="shop_item_cart_goods_title">您所选购的商品</string>
    <string name="shop_item_cart_goods_goon">继续购物</string>
    <string name="shop_item_cart_goods_confirm">确认订单</string>
    <string name="shop_item_cart_goods_delete">删除</string>
    <string name="shop_item_goods_typeChange">款式选择</string>
    <string name="shop_item_good_numChange">数量选择</string>
    <string name="shop_item_joinCart">加入购物车</string>
    <string name="shop_item_detail_goods_title">雅诗兰黛四瓶装套件</string>
    <string name="shop_item_detail_goods_detail">TOM FORD为圣罗兰设计的土耳其式豹纹长衫据说是今季波西米亚风格的代表。\n虽然它看上去实在是太奢华了，\n远远超出了一个真正波西米亚人对于华丽生活的想象，\n可是又有什么关系？我们在一开始就讲过，波西米亚风格跟波西米亚没什么大关系。</string>
    <string name="shop_success">订单提交成功</string>
    <string name="shop_error">订单提交失败</string>
    <string name="shop_submit">填写并核对收货信息</string>
    <string name="shop_sub_name">收件人姓名 :</string>
    <string name="shop_sub_add">收件地址:</string>
    <string name="shop_sub_phone">联系电话:</string>
    <string name="shop_sub_name_edit">请输入收件人姓名...</string>
    <string name="shop_sub_add_edit">请输入收件人地址...</string>
    <string name="shop_sub_phone_edit">请输入联系电话...</string>
    <string name="shop_return_cart">返回购物车</string>
    <string name="shop_sub_go">提交订单</string>
    <string name="shop_pay">网银支付</string>
    <string name="shop_order">订单号:</string>
    <string name="shop_money">总金额:</string>
    <string name="shop_card">银行卡号:</string>
    <string name="shop_name">持卡人姓名:</string>
    <string name="shop_no">身份证号码:</string>
    <string name="shop_cvv2">Cvv2</string>
    <string name="shop_lasttime">有效期:</string>
    <string name="shop_card_edit">信用卡卡号...</string>
    <string name="shop_name_edit">信用卡的开户姓名(中文)...</string>
    <string name="shop_no_edit">身份证号码...</string>
    <string name="shop_cvv2_edit">卡背面最后三位数字，如999...</string>
    <string name="shop_lasttime_edit">卡正面日期去掉/,如1503...</string>
    <string name="shop_return_sub">返回订单</string>
    <string name="shop_pay_commid">确认支付</string>
    <string name="shop_sub_change">修改</string>
    <string name="login_language_chioce">请选择您习惯的语言</string>
    <string name="login_language_chioce_jian">简体中文</string>
    <string name="login_language_chioce_fan">繁體中文</string>
    <string name="login_language_chioce_eng">English</string>
    <string name="login_language_chioce_jap">日本語</string>
    <string name="login_language_chioce_kor">한국어</string>
    <string name="login_chioce_next">选择之后向右滑动进入下一步</string>
    <string name="login_input">请输入您的登机信息</string>
    <string name="login_nu">请输入您的座位号</string>
    <string name="login_id">请输入您登机时的证件号后六位</string>
    <string name="login_member">您已经是春秋会员，请输入会员密码</string>
    <string name="login_member_msg">建议您使用会员登录，享受更多优惠服务</string>
    <string name="login_pwd">请输入您的会员密码</string>
    <string name="confirm">确认</string>
    <string name="confirm_login">确认登录</string>
    <string name="login_mian">直接进入首页</string>
    <string name="login_agree_ife">我已经阅读并同意《IFE用户服务协议》</string>
    <string name="login_agree_sss">我已同意《春秋航空网会员注册协议》</string>
    <string name="login_ife_title">IFE用户条款</string>
    <string name="login_sss_title">注册成为春秋会员，可享受更多专属优惠和服务！</string>
    <string name="register">立即注册</string>
    <string name="register_hint">根据公信部及中国民航局相关法律法规要求，请您务必填写真实联系方式及相关信息</string>
    <string name="login_os">操作系统推荐:iOS6/Android 4.0/Windows7及以上。</string>
    <string name="login_confrim_set">确认我的设置</string>
    <string name="login_dialog_confirm">确定</string>
    <string name="login_dialog_setno">航班号未输入，请输入航班号</string>
    <string name="login_dialog_code">姓名未输入，请输入姓名</string>
    <string name="login_dialog_agree">未同意用户条款，请同意用户条款</string>
    <string name="login_dialog_error">航班号或姓名输入错误，请重新输入航班号与姓名</string>
    <string name="setting_haihang_txt">关于本机</string>
    <string name="setting_others_txt">其他设置</string>
    <string name="setting_voice_txt">声音</string>
    <string name="setting_brightness_txt">亮度</string>
    <string name="setting_haihang_dialog">版本号:</string>
    <string name="setting_input">请输入密码</string>
    <string name="setting_error">密码错误，请重新输入</string>
    <string name="index_recommend_str">精彩推荐</string>
    <string name="index_personal_str">个性频道</string>
    <string name="index_movie_str">微电影</string>
    <string name="index_news_str">新闻</string>
    <string name="index_kid_str">儿童乐园</string>
    <string name="index_customer_str">客户声音</string>
    <string name="index_dianshi_str">电视</string>
    <string name="index_book_str">杂志</string>
    <string name="index_shop_str_flc">购物中心</string>
    <string name="index_shop_str_sss">绿翼商城</string>
    <string name="index_about_str">关于我们</string>
    <string name="index_music_str">音乐</string>
    <string name="index_game_str">游戏</string>
    <string name="index_club_str">常旅客俱乐部</string>
    <string name="index_set_str">设置</string>
    <string name="ad_time">广告剩余  %1$d秒,滑动退出</string>
    <string name="video_ad_time">广告剩余 </string>
    <string name="video_player_info_drm_error_not_supported">播放器暂不支持DRM</string>
    <string name="video_player_info_drm_error_unsupported_scheme">播放器不支持该DRM方案</string>
    <string name="video_player_info_drm_error_unknown">未知播放器DRM错误</string>
    <string name="hour">小时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="fail_play_title">播放失败</string>
    <string name="fail_play_ad_msg">播放广告失败，可能资源有问题或者播放器出错,点击确定进入视频播放!</string>
    <string name="fail_play_msg">播放视频失败，可能资源有问题或者播放器出错，点击确定退出!</string>
    <string name="inform_text">亲爱的乘客您好，现在飞机起伏，请坐平稳，等待飞机平稳，谢谢合作。</string>
    <string name="inform_button_txt">继续使用</string>
    <string name="new_version">发现新版本</string>
    <string name="need_update">需要升级吗？</string>
    <string name="update_info">下载中，已下载 %1$d M,一共 %2$d M</string>
    <string name="downloading">下载中</string>
    <string name="downloadfail">下载失败！</string>
    <string name="game_box">游戏未安装</string>
    <string name="recommend">最新推荐</string>
    <string name="nolocal_book_toast">本地没有该书，开始下载！</string>
    <string name="book_download_success">"图书已下载完成!"</string>
    <string name="book_download_fail">"图书下载失败!"</string>
    <string name="music_dialog_time">请输入睡眠等待时间(分钟)</string>
    <string name="music_time_dialog">输入无效，请重新输入</string>
    <string name="flight_mian">欢迎乘坐春秋航空%1$s次航班\n本次航线:%2$s</string>
    <string name="shop_detail_goods_num">机上库存%1$s件 \u0008\u0008\u0008\u0008每个ID限购%2$s件</string>
    <string name="shop_detail_freight">运费：张家界\u0008至\u0008上海\u0008快递：\u0008%.2f\u000A下单后由我航空公司发货并提供售后服务</string>
    <string name="cart_all_num">已选择  <Data><![CDATA[ <font color="#ff0000">%1$s</font> ]]></Data> 件商品</string>
    <string name="cart_all_price">总金额: <Data><![CDATA[ <font color="#ff0000">￥%.2f</font> ]]></Data></string>
    <string name="cart_goods_all_prices">信用卡：￥%1$.2f</string>
    <string name="score">积分:</string>
    <string name="delivery_down">物流配送</string>
    <string name="delivery_up">机上交付</string>
    <string name="pay_card">信用卡</string>
    <string name="pay_score">积分</string>
    <string name="pay_cash">现金</string>
    <string name="something_tosay">输入您想说的话</string>
    <string name="vieo_name">微电影</string>
    <string name="index_airenv_str">飞行状态</string>
    <string name="warning">不支持该服务!</string>
    <string name="check_order_info">核对订单信息</string>
    <string name="djs_time">倒计时  %1$d秒</string>
    <string name="ad_image">ad image</string>
    <string name="after_service">售后服务</string>
    <string name="ife_logon">我已经阅读并同意《IFE用户服务协议》</string>
    <string name="choose_l">语言选择</string>
    <string name="sell_out">已售罄</string>
    <string name="buy_now">立即购买</string>
    <string name="order_detail"><Data><![CDATA[<u>订单详情</u>]]></Data></string>
    <string name="order_back"><Data><![CDATA[<u>返回购物车修改</u>]]></Data></string>
    <string name="change_user_info"><Data><![CDATA[<u>修改收货人信息</u>]]></Data></string>
    <string name="change_invoice_info"><Data><![CDATA[<u>修改发票信息</u>]]></Data></string>
</resources>
