<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants" >

    <TextView
        android:id="@+id/customer_title_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/customer_wifi_detail"
        android:textColor="#000000"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/wifi_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"            
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/customer_rb1"
            android:focusable="false" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio"
            android:checked="true"
            android:paddingLeft="30dp"
            android:text="@string/customer_satisfaction_rb1"
            android:textColor="#000000" 
            android:textSize="12sp"/>

        <RadioButton
            android:id="@+id/customer_rb2"
            android:focusable="false" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio"
            android:paddingLeft="30dp"
            android:text="@string/customer_satisfaction_rb2"
            android:textColor="#000000"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/customer_rb3"
            android:focusable="false" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio"
            android:paddingLeft="30dp"
            android:text="@string/customer_satisfaction_rb3"
            android:textColor="#000000"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/customer_rb4"
            android:focusable="false" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/radio"
            android:paddingLeft="30dp"
            android:text="@string/customer_satisfaction_rb4"
            android:textColor="#000000"
            android:textSize="12sp" />
    </RadioGroup>

</LinearLayout>