<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/transparent_20_white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/customer_bbs_title1"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_tosay"
                android:layout_width="match_parent"
                android:layout_height="180dip"
                android:background="@color/white"
                android:gravity="start"
                android:hint="@string/something_tosay"
                android:maxLength="100"
                android:padding="20dip"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="20dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/btn_cart_selector"
                    android:paddingBottom="10dip"
                    android:paddingLeft="40dip"
                    android:paddingRight="40dip"
                    android:paddingTop="10dip"
                    android:text="@string/customer_confirm"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>